various small big book fixes